fix misaligned category cards & motd badge causing horiz scrolling

--- a/src/styles/category-list/category-card.css
+++ b/src/styles/category-list/category-card.css
@@ -3,13 +3,16 @@
   display: grid;
   grid-gap: 5px;
 
-  max-width: 400px;
   padding: 8px;
 
   background: white;
   border-radius: 5px;
   box-shadow: 2px 2px 6px -1px lightgrey;
   cursor: pointer;
+}
+
+.category-card--expanded {
+  max-width: 400px;
 }
 
 .category-card__title {
