--- a/src/styles/favourites/favourite-card.css
+++ b/src/styles/favourites/favourite-card.css
@@ -1,6 +1,6 @@
 .favourite-card {
   display: grid;
-  grid-template-columns: 120px 1fr auto;
+  grid-template-columns: 110px 1fr auto;
   grid-template-rows: auto auto 1fr auto;
   grid-gap: 0 5px;
 
