--- a/src/styles/global/global.css
+++ b/src/styles/global/global.css
@@ -27,6 +27,7 @@ a {
 }
 
 .visually-hidden {
+  display: block;
   position: absolute;
   width: 1px;
   height: 1px;
